Fix multiple bugs in TEI processing pipeline and shared code
- Fix .toList() Java 16 incompatibility (use Collectors.toList() for Java 11)
- Add title to selectedSequences in processTEIDocument (was silently discarded)
- Fix NPE in XMLUtilities.segment() when sentence detection fails
- Fix biblioRefMap key mismatch (use consistent refKey integer keys)
- Add bounds check for classifier results to prevent IndexOutOfBoundsException
- Fix Content-Type mismatch: use APPLICATION_JSON instead of TEXT_PLAIN for JSON endpoints
- Fix off-by-one in getLastDirectChild (loop now checks index 0)
- Fix DatastetAnalyzer.getInstance() race condition (restore synchronized block)
- Fix getTextNoRefMarkersAndMarkerPositions duplicating content for multi-child refs
- Fix DatasetParser.getInstance() broken double-checked locking
- Add null checks for originFile in finally blocks

https://claude.ai/code/session_018EBZhK2RtGtsvN4E1rp2tF